# validy

./: .gitignore  Cargo.toml  expand.sh  license.md  readme.md  rustfmt.toml  todo.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: builders.rs  core.rs  impls.rs  lib.rs  settings.rs
src/axum/: valid.rs
src/functions/: mod.rs
src/functions/modification/: cases.rs  mod.rs  time.rs  uuid.rs
src/functions/parsing/: ip.rs  mod.rs
src/functions/validation/: email.rs  field_data.rs  iter.rs  mod.rs  option.rs  prefix.rs  range.rs  suffix.rs  time.rs  url.rs  uuid.rs
src/tests/: derive.rs
src/utils/: assertions.rs  helpers.rs  macros_rules.rs  mod.rs  regex.rs
tests/: mod.rs
tests/axum/: asynchronous.rs  asynchronous_modificate.rs  asynchronous_modificate_with_context.rs  asynchronous_payload.rs  asynchronous_payload_with_context.rs  asynchronous_with_context.rs  default.rs  mocks.rs  mod.rs  modificate.rs  modificate_with_context.rs  payload.rs  payload_with_context.rs  with_context.rs
tests/axum/multipart/: asynchronous.rs  asynchronous_modificate.rs  asynchronous_modificate_with_context.rs  asynchronous_payload.rs  asynchronous_payload_with_context.rs  asynchronous_with_context.rs  default.rs  mod.rs  modificate.rs  modificate_with_context.rs  payload.rs  payload_with_context.rs  with_context.rs
tests/modifications/: async_custom.rs  async_custom_with_context.rs  camel_case.rs  capitalize.rs  custom.rs  custom_with_context.rs  inline.rs  kebab_case.rs  lower_camel_case.rs  lowercase.rs  mod.rs  parse_naive_date.rs  parse_naive_time.rs  parse_time.rs  parse_uuid.rs  shouty_kebab_case.rs  shouty_snake_case.rs  snake_case.rs  train_case.rs  trim.rs  trim_end.rs  trim_start.rs  uppercase.rs
tests/modifications/fail_fast/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs
tests/modifications/fail_once_per_field/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs  mod.rs
tests/modifications/full_fail/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs  mod.rs
tests/modifications/last_fail_per_field/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs
tests/parsings/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs  inline.rs  ip.rs  ipv4.rs  ipv6.rs  mod.rs  naive_date.rs  naive_time.rs  time.rs  uuid.rs
tests/utils/: assertions.rs  field_data.rs  mod.rs  multipart_body.rs
tests/validation/: after_today.rs  allowlist.rs  before_today.rs  blocklist.rs  contains.rs  email.rs  ip.rs  ipv4.rs  ipv6.rs  length.rs  mod.rs  now.rs  option.rs  options.rs  pattern.rs  prefix.rs  range.rs  suffix.rs  today.rs  url.rs
tests/validations/: after_now.rs  after_today.rs  allowlist.rs  async_custom.rs  async_custom_with_context.rs  before_now.rs  before_today.rs  blocklist.rs  contains.rs  custom.rs  custom_with_context.rs  email.rs  field_content_type.rs  field_file_name.rs  field_name.rs  inline.rs  ip.rs  ipv4.rs  ipv6.rs  length.rs  mod.rs  naive_date.rs  naive_time.rs  now.rs  option.rs  pattern.rs  prefix.rs  range.rs  suffix.rs  time.rs  today.rs  url.rs  uuid.rs
validation_derive/: Cargo.toml  license.md
validation_derive/src/: attributes.rs  core.rs  fields.rs  imports.rs  lib.rs
validation_derive/src/factories/: asynchronous.rs  asynchronous_modification.rs  asynchronous_modification_with_context.rs  asynchronous_payload.rs  asynchronous_payload_with_context.rs  asynchronous_with_context.rs  core.rs  default.rs  mod.rs  modification.rs  modification_with_context.rs  payload.rs  payload_with_context.rs  with_context.rs
validation_derive/src/factories/boilerplates/: commons.rs  defaults.rs  failure_mode.rs  mod.rs  modifications.rs  payloads.rs
validation_derive/src/factories/extensions/: defaults.rs  mod.rs  modifications.rs  payloads.rs
validation_derive/src/factories/extensions/axum/: defaults.rs  modifications.rs  payloads.rs
validation_derive/src/factories/others/: defaults.rs  mod.rs  modifications.rs  payloads.rs  wrappers.rs
validation_derive/src/factories/utils/: defaults.rs  mod.rs  modifications.rs  payloads.rs
validation_derive/src/primitives/: commons.rs  mod.rs
validation_derive/src/primitives/collections/: allowlist.rs  any.rs  blocklist.rs  none.rs
validation_derive/src/primitives/customs/: mod.rs
validation_derive/src/primitives/customs/modification/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs
validation_derive/src/primitives/customs/parsing/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs
validation_derive/src/primitives/customs/validation/: async_custom.rs  async_custom_with_context.rs  custom.rs  custom_with_context.rs
validation_derive/src/primitives/field_datas/: field_content_type.rs  field_file_name.rs  field_name.rs  mod.rs
validation_derive/src/primitives/format/: camel_case.rs  capitalize.rs  kebab_case.rs  lower_camel_case.rs  lowercase.rs  mod.rs  shouty_kebab_case.rs  shouty_snake_case.rs  snake_case.rs  train_case.rs  trim.rs  trim_end.rs  trim_start.rs  uppercase.rs
validation_derive/src/primitives/inlines/: inline_modification.rs  inline_parse.rs  inline_validation.rs  mod.rs
validation_derive/src/primitives/ips/: ip.rs  ipv4.rs  ipv6.rs  mod.rs  parse_ip.rs  parse_ipv4.rs  parse_ipv6.rs
validation_derive/src/primitives/option/: is_none.rs  is_some.rs  mod.rs  required.rs
validation_derive/src/primitives/patterns/: contains.rs  email.rs  mod.rs  pattern.rs  prefix.rs  suffix.rs  url.rs
validation_derive/src/primitives/ranges/: length.rs  range.rs
validation_derive/src/primitives/specials/: for_each.rs  from_type.rs  ignore.rs  mod.rs  nested.rs
validation_derive/src/primitives/time/: after_now.rs  after_today.rs  before_now.rs  before_today.rs  default_time.rs  mod.rs  naive_date.rs  naive_time.rs  now.rs  parse_naive_date.rs  parse_naive_time.rs  parse_time.rs  today.rs
validation_derive/src/primitives/uuids/: mod.rs  parse_uuid.rs  uuid.rs
(+109 files in other folders)
