[package]
name = "validation"
version = "0.1.0"
edition = "2024"

[dependencies]
validation_derive = { path = "validation_derive", version = "0.1.0", optional = true }
email_address = { version = "0.2.9", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
async-trait = "0.1.89"
regex = { version = "1.12.2", optional = true }
moka = { version = "0.12.12", features = ["sync"], optional = true }
heck = { version = "0.5.0", optional = true }
chrono = { version = "0.4.42", optional = true }
axum = { version = "0.8.8", optional = true }
pretty_assertions = { version = "1.4.1", optional = true }

[features]
all = ["derive", "macro_rules", "validation", "modification", "email", "pattern", "ip", "time", "axum"]
default = ["derive", "macro_rules", "validation", "modification"]
macro_rules = []
macro_rules_assertions = ["dep:pretty_assertions"]
derive = ["dep:validation_derive", "dep:serde"]
validation = []
modification = ["dep:heck"]
email = ["dep:email_address"]
pattern = ["dep:moka", "dep:regex"]
ip = []
time = ["dep:chrono"]
axum = ["dep:axum", "derive", "validation_derive/axum"]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt"] }
