[package]
name = "validation_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4.0"
proc-macro-error = "1.0.4"
regex = "1.12.2"

[features]
default = []
axum = []
