[package]
name = "validation_derive"
version = "1.1.7"
edition = "2024"
description = "Secundary Crate for macros."
license = "MIT"
repository = "https://github.com/L-Marcel/validy"
keywords = ["validation", "axum", "derive", "input-validation", "macros"]
categories = ["web-programming", "data-structures", "parsing"]
exclude = [".github/", ".gitignore", "expand.sh", "tests/"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4.0"
proc-macro-error = "1.0.4"
regex = "1.12.2"

[features]
default = []
axum = []
axum_multipart = []
